--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <body onload="go()">
     <style>
     body{
-        background-color: #001536; 
+        background-color: #00112b; 
         color: white;
     }
     
