--- a/index.html
+++ b/index.html
@@ -35,8 +35,7 @@ function done()
 
 window.midExploit = function()
 {
-    //preloadScripts(['../blob.js', '../jb.js', 'netcat.js'], go);
-    preloadScripts(['750.js', 'c-code.js', 'loader-755.js', 'hen.js', 'mira-c-code.js'], go);
+    preloadScripts(['750.js', 'jb.js', 'preloader.js', 'restore.js', 'loader.js'], go);
 }
 
 window.postExploit = function()
