--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ function done()
 
 window.midExploit = function()
 {
-    preloadScripts(['750.js', 'jb.js', 'preloader.js', 'restore.js', 'loader.js'], go);
+    preloadScripts(['750.js', 'jb.js', 'preloader.js', 'restore755.js', 'loader.js'], go);
 }
 
 window.postExploit = function()
